Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


pkpgcore 0.4.7.8: August 28, 2008

* pkgcore now properly preserves ownership of symlinks on merging.
  ensure_perms plugins now need to handle symlinks (lchown at the least).

* free resolver caches after resolution is finished; lower the memory
  baseline for pmerge.

* fix up interface definitions for >snakeoil-0.2 dependant_methods changes.
  Via these cleanups and >snakeoil-0.2, memory usage is massively decreased
  for pmerge invocations.

* swallow EPIPE in pquery when stdout is closed early.


pkgcore 0.4.7.7: August 11, 2008

* Disable fakeroot tests due to odd behaviour, and the fact it's currently
  unused.

* Fix installation issue for manpages for python2.4; os.path.join behaviour
  differs between 2.4 and 2.5.

* Kill off large memory leak that reared it's head per pkg merge; still is
  a bit of a leak remaining, but nothing near as bad as before.


pkgcore 0.4.7.6: August 10, 2008

* fix sandbox complaint when PORT_LOGDIR is enabled- sandbox requires abspath
  for any SANDBOX_WRITE exemptions, if PORT_LOGDIR path includes symlinks,
  force a `readlink -f` of the sandbox exemption.
  http://forums.gentoo.org/viewtopic-p-5176414.html

* ticket 213; if stricter is in FEATURES, fail out if insecure rpath is
  detected- otherwise, correct the entries.

* ticket 207; drop the attempted known_keys/cache optimizations, instead
  defer to parent's iterkeys always.  This eliminates the concurrency issue,
  and simplifies staleness detection.  Also kills off a tb for --newuse .

* ticket 201; pquery --restrict-revdep-pkgs wasn't behaving properly for
  slot/repository/user atoms, now does.

* Correct potential segfaults in cpython version of PackageRestriction and
  StrExactMatch's __(eq|ne)__ implementations.


pkgcore 0.4.7.5: July 6, 2008

* incremental_expansion and friends have grown a cpython implementation-